--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ed79b0c7",
    "metadata": {},
    "outputs": [
@@ -108,13 +108,12 @@
     "\n",
     "traders_spec = {'sellers':sellers_spec, 'buyers':buyers_spec}\n",
     "\n",
-    "range1 = (50, 100)  # equilibrium_price1 ~ 75\n",
-    "range2 = (150, 200) # equilibrium_price2 ~ 175\n",
+    "range = (150, 200) # equilibrium_price2 ~ 175\n",
     "\n",
     "start_time = 0\n",
     "end_time = 60 * 10\n",
     "\n",
-    "supply_schedule = [{'from': start_time, 'to': end_time, 'ranges': [range2], 'stepmode': 'fixed'}]\n",
+    "supply_schedule = [{'from': start_time, 'to': end_time, 'ranges': [range], 'stepmode': 'fixed'}]\n",
     "demand_schedule = supply_schedule\n",
     "# create a market maker with default parameter settings and add to traders_spec\n",
     "# mrktmakers_spec = [('MMM01', 1)]\n",
@@ -203,6 +202,109 @@
     "plt.boxplot([zic,zip],labels=['ZIC','ZIP'])\n",
     "plt.title('ZIC vs ZIP')\n",
     "p1.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93b6cb4d",
+   "metadata": {},
+   "source": [
+    "# Project Report\n",
+    "\n",
+    "## 1. Research Question and Objectives\n",
+    "\n",
+    "This study aims to address the claim: \"ZIP traders generate more profit than ZIC traders in homogeneous and periodic BSE markets with static and symmetric demand and supply curves.\"\n",
+    "\n",
+    "### Research Hypotheses\n",
+    "- **Null Hypothesis (H₀)**: $X_{ZIP} = X_{ZIC}$ (The mean profit of ZIP traders equals the mean profit of ZIC traders)\n",
+    "- **Alternative Hypothesis (H₁)**: $X_{ZIP} \\neq X_{ZIC}$ (The mean profit of ZIP traders does not equal the mean profit of ZIC traders)\n",
+    "\n",
+    "## 2. Experimental Design\n",
+    "\n",
+    "### 2.1 Market Configuration\n",
+    "To meet the requirements of the research question, we configured the following market environment:\n",
+    "\n",
+    "- **Market Type**: Homogeneous market (all traders use the same trading strategy)\n",
+    "- **Time Mode**: Periodic market (periodic timemode)\n",
+    "- **Supply and Demand Curves**: \n",
+    "  - Static curves (stepmode: 'fixed')\n",
+    "  - Symmetric curves (supply and demand use the same price range)\n",
+    "  - Price range: (150, 200), equilibrium price approximately 175\n",
+    "\n",
+    "### 2.2 Trader Configuration\n",
+    "- **ZIC Experimental Group**: 10 ZIC sellers and 10 ZIC buyers\n",
+    "- **ZIP Experimental Group**: 10 ZIP sellers and 10 ZIP buyers\n",
+    "- Each experimental group runs independently to ensure result independence\n",
+    "\n",
+    "### 2.3 Experimental Parameters\n",
+    "- **Number of Runs**: 50 independent runs (n=50), ensuring statistical significance\n",
+    "- **Trading Duration**: 0 to 600 seconds (10 minutes)\n",
+    "- **Order Interval**: 15 seconds (periodic order generation)\n",
+    "- **Data Collection**: Record average balance (avg_balance) and trade tape for each experiment\n",
+    "\n",
+    "### 2.4 Rationale for Methodological Choices\n",
+    "1. **50 Experiments**: Provides sufficient sample size to meet the statistical requirements of the t-test, ensuring result reliability\n",
+    "2. **Periodic Market**: Meets the research question requirements, simulating the periodic characteristics of real markets\n",
+    "3. **Static Symmetric Supply-Demand Curves**: Eliminates the influence of market structure differences on results, focusing on the comparison of trading strategies themselves\n",
+    "4. **Independent Samples t-test**: Suitable for comparing the mean differences between two independent groups (ZIP vs ZIC)\n",
+    "\n",
+    "## 3. Data Analysis Methods\n",
+    "\n",
+    "### 3.1 Data Extraction\n",
+    "Extract the final profit of each trader (the last row of column 7) from the average balance CSV files of each experiment, collecting all profit data for both ZIP and ZIC groups separately.\n",
+    "\n",
+    "### 3.2 Statistical Testing\n",
+    "Use independent samples t-test (`scipy.stats.ttest_ind`) to compare the mean profit differences between the two groups:\n",
+    "- Test whether there is a significant difference in means between two independent samples\n",
+    "- Assume equal variances between the two groups (can be verified with Levene's test)\n",
+    "\n",
+    "### 3.3 Visualization\n",
+    "Use boxplots to display the distribution characteristics of profits for both groups, including:\n",
+    "- Median\n",
+    "- Quartiles\n",
+    "- Outliers\n",
+    "- Overall shape of data distribution\n",
+    "\n",
+    "## 4. Experimental Results\n",
+    "\n",
+    "### 4.1 Descriptive Statistics\n",
+    "From the boxplot, we can observe:\n",
+    "- Distribution characteristics of profits for ZIC and ZIP groups\n",
+    "- Median and interquartile range of both groups\n",
+    "- Presence of outliers\n",
+    "\n",
+    "### 4.2 Hypothesis Test Results\n",
+    "- **t-statistic**: t = -24.62\n",
+    "- **p-value**: p = 5.08 × 10⁻⁴³\n",
+    "\n",
+    "### 4.3 Result Interpretation\n",
+    "1. **Negative t-value**: Indicates that the mean profit of ZIP traders is lower than the mean profit of ZIC traders\n",
+    "2. **Extremely small p-value**: Far below the 0.001 significance level, indicating an extremely significant difference\n",
+    "3. **Statistical Conclusion**: Strongly reject the null hypothesis at α=0.05 significance level\n",
+    "\n",
+    "## 5. Conclusions\n",
+    "\n",
+    "### 5.1 Main Findings\n",
+    "The results show that **ZIP traders generate significantly lower profits than ZIC traders**, which contradicts the original claim. Specifically:\n",
+    "- The mean profit of ZIP traders is significantly lower than that of ZIC traders\n",
+    "- This difference is statistically extremely significant (p < 0.001)\n",
+    "\n",
+    "### 5.2 Response to the Original Claim\n",
+    "The original claim that \"ZIP traders generate more profit than ZIC traders\" is **not supported**. On the contrary, under the experimental configuration of this study, ZIC traders demonstrated significantly better profitability.\n",
+    "\n",
+    "### 5.3 Possible Explanations\n",
+    "1. **Market Environment Factors**: In static, symmetric supply-demand curves and periodic markets, ZIC's zero-intelligence strategy may be better adapted to this simple market structure\n",
+    "2. **Strategy Characteristics**: ZIP's adaptive learning mechanism may lead to over-adjustment in simple market environments, affecting profitability\n",
+    "3. **Experimental Configuration**: Specific market parameters (price range, order interval, etc.) may favor the ZIC strategy\n",
+    "\n",
+    "### 5.4 Research Limitations\n",
+    "1. Experiments are limited to specific market configurations (static symmetric curves, periodic mode)\n",
+    "2. Results may not apply to other market environments (e.g., dynamic markets, asymmetric supply-demand curves)\n",
+    "3. Further research is needed on strategy performance under different market conditions\n",
+    "\n",
+    "## 6. Summary\n",
+    "\n",
+    "Through 50 independent experiments and rigorous statistical hypothesis testing, this study systematically evaluated the performance of ZIP and ZIC trading strategies in homogeneous periodic BSE markets. The results show that under the given market conditions, ZIC traders generated significantly higher profits, contradicting the original claim. This finding emphasizes the importance of evaluating trading strategy performance across different market environments.\n"
    ]
   },
   {
